main/styles/applications/import.less
/* Import */

.field-upload-container {
  position: relative;
  height: 50px;
  margin-bottom: 20px;

  label {
    position: absolute;
    top: 0;
    left: 0;
    min-width: 150px
  }

  .form-group.has-feedback {position: relative}

}

.upload-field {
  position: relative;
  height: 37px;
  top: 30px;
  padding: 0;

  & input {
    position: absolute;
    top: 5%;
    z-index: 42;
    border: 0;
    width: 100%;
    height: 90%;
    opacity: 0
  }

}

// fixes BS-13689 on ie double click is needed to open browse box
.isBrowser-ie .upload-field input {
  font-size: 999px;
}

.upload-field-content {
  position: absolute;
  z-index: 10;
  width: 100%;
  height: 100%;
  background: white;
  border: 1px solid #ddd;
  border-radius: 3px;
  box-shadow: inset 0 0 .5em rgba(0,0,0,.3);
  pointer-events: none;
  line-height: 35px;
  text-indent: 1em
}

.upload-field-content::after {
  position: absolute;
  content: '';
  background: url("themeResource?theme=portal&location=skin/images/form-input-file.png") transparent no-repeat right center;
  display: block;
  height: 35px;
  width: 35px;
  right: 0;
  top: 0;
}
.upload-field-content.upload-success::after {
  background: url("themeResource?theme=portal&location=skin/images/form-input-file-ok.png") transparent no-repeat right center;
}

